navigation et première ligne

--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>TwittEZ - Reprenez le contrôle de votre compte Twitter !</title>
-    <meta name="description" content="Managez vos followers Twitter de manière efficace : TwittEZ vous permet de contrôler la qualité de votre audience et de vos sources.">
+  <title>TwittEZ - Reprenez le contrôle de votre compte Twitter !</title>
+  <meta name="description" content="Managez vos followings Twitter de manière efficace : TwittEZ vous permet de contrôler la qualité de votre audience.">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- Leave those next 4 lines if you care about users using IE8 -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
+<body>
+  <div id="topmenu">
+    <div id="headerlogo">
+      <a class="logo" href="#">Twitt<span class="ez-blue">EZ</span></a>
+    </div>
+    <div id="navigation">
+      <ul class="list-inline">
+          <li><a href="#">Contact</a></li>
 
+        </ul>
+    </div>
+
+  </div>
+  <img src="images/twitterbird.png" alt="twitter logo" id="twitterlogo">
+  <div id="wrapper" class="text-center">
+    <h1>Twitt<span class="ez-blue">EZ</span></h1>
+    <h2>Trop de tweets inutiles ? Des difficultés à trouver de bonnes sources qualifiées ? <br/>
+      Regagnez le contrôle de votre fil Twitter en suivant les bonnes personnes !</h2>
+      <button class="btn btn-primary cta">Analysez vos followings</button>
+    </div>
 
 
 
@@ -29,4 +42,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
-</html>
+  </html>
