--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
     <div id="navigation">
       <ul class="list-inline">
-          <li><a href="#">Contact</a></li>
+        <li><a href="#">Contact</a></li>
 
-        </ul>
+      </ul>
     </div>
 
   </div>
@@ -35,11 +35,82 @@
       <button class="btn btn-primary cta">Analysez vos followings</button>
     </div>
 
+    <div class="container text-center">
+      <div class="spacer-sm"></div>
+      <div class="row">
+       <h2>Comment ça marche ?</h2>
+       <div class="col-md-6">
+         <h3>Trouver des influenceurs de qualité</h3>
+
+         <p class="text-justify">
+           L'application Twitt<span class="ez-blue">EZ</span> vous permet de trouver des influenceurs Twitter de qualité dans n'importe quel domaine. <br>
+           Vous n'avez qu'à rentrer le sujet dans l'application et celle-ci vous fournira une liste des meilleurs influenceurs.
+         </p>
+
+       </div>
+       <div class="col-md-6">
+        <h3>Analyse de vos followings</h3>
+         <p class="text-justify">
+          L'application permet aussi d'analyser vos followings existants pour vérifier ceux qui sont de bonne qualité et ceux que vous pouvez unfollow.
+        </p>
+
+      </div>
+
+    </div>
+
+  </div>
+  <div class="container text-center">
+  <div class="spacer-sm"></div>
+    <div class="row">
+      <h2>Twitt<span class="ez-blue">EZ</span>, c'est l'assurance de :</h2>
+        <div class="spacer-sm"></div>
+
+      <div class="col-md-3">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <h3>Gain de temps</h3>
+        <p>
+          C'est génial
+        </p>
+
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
+
+        <h3>Facilité d'utilisation</h3>
+        <p>
+          C'est génial
+        </p>
+
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-info-circle" aria-hidden="true"></i>
+
+        <h3>Une veille simplifiée</h3>
+        <p>
+          C'est génial
+        </p>
+
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-user" aria-hidden="true"></i>
+
+        <h3>Un audience en béton</h3>
+        <p>
+          C'est génial
+        </p>
+
+      </div>
+
+    </div>
+    <div class="spacer"></div>
+
+  </div>
 
 
 
-    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  </body>
-  </html>
+
+  <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
